--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             }
         </script>
-        <button onclick="nextSlide()" class="rightButton noStyle"></button>
-        <button onclick="prevSlide()" class="leftButton noStyle"></button>
+        <button onclick="nextSlide()" class="rightButton noStyle">.</button>
+        <button onclick="prevSlide()" class="leftButton noStyle">.</button>
     </body>
 </html>
