--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/stylesheet" rel="styles.css">
 
         <title>Slideshow</title>
     </head>
@@ -21,7 +22,7 @@
 
             }
         </script>
-        <button onclick="nextSlide()" class="rightButton noStyle">.</button>
-        <button onclick="prevSlide()" class="leftButton noStyle">.</button>
+        <button onclick="nextSlide()" class="rightButton noStyle"></button>
+        <button onclick="prevSlide()" class="leftButton noStyle"></button>
     </body>
 </html>
