--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             }
         </script>
-        <button onclick="nextSlide()" class="rightButton noStyle"></button>
-        <button onclick="prevSlide()" class="leftButton noStyle"></button>
+        <button onclick="nextSlide()" class="leftButton noStyle"></button>
+        <button onclick="prevSlide()" class="rightButton noStyle"></button>
     </body>
 </html>
