--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         </script>
         <button onclick="nextSlide()" class="leftButton noStyle"></button>
         <button onclick="prevSlide()" class="rightButton noStyle"></button>
+        <img class="slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN6ezPL3qZI09ny9foy-nQQOSefqFDVv1_1cV7JqCMVQ&s"/>
     </body>
 </html>
