--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
                 if (event.code == "ArrowRight") nextSlide();
                 if (event.code == "ArrowLeft") prevSlide();
+                alert("hello " + event.code)
 
             })
             function nextSlide() {
