--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <script>
-            window.addEventListener("keypress", (event) => {
+            document.addEventListener("keypress", (event) => {
 
                 if (event.code == "ArrowRight") nextSlide();
                 if (event.code == "ArrowLeft") prevSlide();
