--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 if (event.code == "ArrowLeft") prevSlide();
                 alert("hello " + event.code)
 
-            })
+            }, false)
             function nextSlide() {
 
                 alert("Next Slide");
