--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <script>
             document.addEventListener('keypress', (event) => {
 var code = event.code;
-                if (code === "ArrowRight") nextSlide()
-                if (code === "ArrowLeft") prevSlide()
+                if (code === "ArrowRight"){ nextSlide()}
+                if (code === "ArrowLeft") {prevSlide()}
 }, false);
             function nextSlide() {
 
