--- a/index.html
+++ b/index.html
@@ -11,23 +11,44 @@
     <body>
         <script>
             document.addEventListener('keypress', (event) => {
-var code = event.code;
+                var code = event.code;
                 if (code === "ArrowRight"){ nextSlide()}
                 if (code === "ArrowLeft") {prevSlide()}
-}, false);
+            }, false);
+            
+            var currentId = 0;
+            var maxId = 1;
+
             function nextSlide() {
 
-                alert("Next Slide");
+                if (currentId == maxId) {currentId = 0;}
+                else {currentId = currentId + 1}
 
             }
 
             function prevSlide() {
 
-                alert("Previous Slide")
+                if (currentId == 0) {currentId = maxId}
+                else {currentId = currentId - 1}
 
             }
+
+            var interval = setInterval(() => {
+
+                for (let i = 0; i <= maxId; i++) {
+
+                    var img = document.getElementById(i.toString());
+                    img.style.opacity = 0;
+
+                    if (i === currentId) {img.style.opacity = 1;}
+
+                }
+
+            }, 100)
+
         </script>
-        <img class="slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN6ezPL3qZI09ny9foy-nQQOSefqFDVv1_1cV7JqCMVQ&s"/>
+        <img id="0" class="slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN6ezPL3qZI09ny9foy-nQQOSefqFDVv1_1cV7JqCMVQ&s"/>
+        <img id="1" class="slide" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAhAPGUR-KfyPqbOmkjxSSCYV5Wy6aFQjIKV0MVmjDG0OCXnP1_zW4EyjVwyHonkscLWo:https://media.sproutsocial.com/uploads/2017/02/10x-featured-social-media-image-size.png&usqp=CAU"/>
         <button onclick="nextSlide()" class="leftButton noStyle"></button>
         <button onclick="prevSlide()" class="rightButton noStyle"></button>
     </body>
